# crypto-backtester

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  README.md.new  VSS_TRADING_ARCHITECTURE.md  orchestration_bootstrap.py  pyproject.toml  requirements.txt  research_contracts.py
Test Backtest/: report_20260311_034702.html
agents/: __init__.py  agent_prompting.py  backtest_runner_agent.py  conversation.py  engineer_backends.py  example.py  market_monitor_agent.py  reference_context.py  reporter_agent.py  risk_agent.py  session_tasks.py  strategy_agent.py  strategy_developer_agent.py  strategy_evaluator_agent.py  strategy_rd_workflow.py  trading_agent.py  trading_system.py  workflow.py
alignment/: __init__.py  controller.py  evaluator.py  recorder.py  types.py
backtest/: __init__.py  engine.py
configs/: backtest_config.py
core/: __init__.py  agent_registry.py  approval_queue.py  event_driven_agent.py  example.py  llm_manager.py  message_bus.py  workflow.py
data/: __init__.py  binance.py  loader.py
docs/: AGENT_GOVERNANCE_TEMPLATE.md
experiments/: __init__.py  grid_search.py  optuna_search.py  walk_forward.py
metrics/: __init__.py  performance.py
reports/: __init__.py  generator.py  output.py
research/: implementation_note.md  iteration_log.md
schemas/: backtest_handoff.schema.json  backtest_report.schema.json  engineer_handoff.schema.json  engineer_reference_cache.schema.json  evaluation_handoff.schema.json  strategy_handoff.schema.json
scripts/: add_engineer_reference.py  compare_gemini_backends.py  debug_agentic_loop.py  download_data.py  (+17 more)
(+166 files in other folders)
